2009-04-17  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.33

	* matchbox/core/mb-wm-client-window.h: Add name_has_markup member to
	struct MBWMClientWindow.
	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Set name_has_markup member when
	reading the window title. Related to fix for NB#108303

2009-04-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_press_handler): Remove the
	ButtonRelease handler if we catch ButtonRelease in the loop.
	(mb_wm_decor_button_press_handler): Set up ButtonRelease handler to
	catch ButtonRelease events that are caught while we spin in the main
	loop. Also repaint the button to remove the pressed state effect if
	the handler was called. Fixes: NB#110052

2009-04-14  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.32

	* matchbox/core/mb-window-manager.c (mb_wm_sync, mb_wm_set_theme):
	Move XFlushes after XUngrabServer calls. Also, trap X errors for them
	to fix a crash Bhabani saw.

2009-04-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Reliability improvements.

	* comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_client_destroy):
	  Sync before untrapping the error; if not gdk will get it and it
	  won't appreciate it.
	* core/mb-wm-client.c (mb_wm_client_deliver_message):
	  Trap and ignore errors (BadWindow in particular) from XSendEvent().

2009-04-08  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.31

	* matchbox/core/mb-window-manager.c (mb_wm_sync, mb_wm_set_theme):
	Call XFlush before each XUngrabServer to fix a lock-up. NB#104842

2009-04-07  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.30

	* matchbox/core/mb-window-manager.c (mb_window_manager_init): Use an
	invisible pixmap instead of XFixesHideCursor to allow applications to
	show it. Fixes: NB#109073

2009-04-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Made libmatchbox2 warning-free.
